projects/compiler/test/typechecker/special_identifier/error_import_no_export.abra
val x = #import("./_mod").b